--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,9 +38,9 @@
   </div>
 
     
-  <script src="/community/assets/lib/bootstrap.bundle.min.js"></script>
+  <script src="/assets/lib/bootstrap.bundle.min.js"></script>
   
-  <script src="/community/assets/js/wmlog.js?v={{site.data.config.v}}"></script>
+  <script src="/assets/js/wmlog.js?v={{site.data.config.v}}"></script>
 
     <!-- Toast Component -->
     <div id="wmToast" class="toast text-bg-success" data-bs-autohide="false">
