--- a/_includes/register404.html
+++ b/_includes/register404.html
@@ -89,4 +89,4 @@ You profile was created successfully! Please wait few seconds to get updated.</d
    
    </script>
      {% assign ver = site.data.config.v %}
-   <script src="/community/assets/js/wmreg.js?v={{site.data.config.v}}"></script>
+   <script src="/assets/js/wmreg.js?v={{site.data.config.v}}"></script>
