--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   {% include head.html %}
-  <link rel="stylesheet" href="/community/assets/css/style.css?v={{site.data.config.v}}">
-  <link rel="stylesheet" href="/community/assets/lib/bootstrap.min.css">
-  <link rel="stylesheet" href="/community/assets/lib/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css?v={{site.data.config.v}}">
+  <link rel="stylesheet" href="/assets/lib/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/lib/bootstrap-icons.min.css">
   <meta name="google-signin-client_id" content="69794757092-emuuqmul46p24bre1qsim9veuf5hdnoh.apps.googleusercontent.com">
-  <script src="/community/assets/lib/jquery.min.js"></script>
-  <script src="/community/assets/js/wmlib.js?v={{site.data.config.v}}"></script>
+  <script src="/assets/lib/jquery.min.js"></script>
+  <script src="/assets/js/wmlib.js?v={{site.data.config.v}}"></script>
 </head>
 <body>
 {% include header.html %}
