--- a/_layouts/community.html
+++ b/_layouts/community.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   {% include head.html %}
-  <link rel="stylesheet" href="/community/assets/css/style.css?v={{site.data.config.v}}">
-  <link rel="stylesheet" href="/community/assets/lib/bootstrap.min.css">
-  <link rel="stylesheet" href="/community/assets/lib/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="/assets/css/style.css?v={{site.data.config.v}}">
+  <link rel="stylesheet" href="/assets/lib/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/lib/bootstrap-icons.min.css">
   <meta name="google-signin-client_id" content="69794757092-emuuqmul46p24bre1qsim9veuf5hdnoh.apps.googleusercontent.com">
-  <script src="/community/assets/lib/jquery.min.js"></script>
-  <script src="/community/assets/js/wmlib.js?v={{site.data.config.v}}"></script>
+  <script src="/assets/lib/jquery.min.js"></script>
+  <script src="/assets/js/wmlib.js?v={{site.data.config.v}}"></script>
 </head>
 <body>
 {% include header.html %}
@@ -26,7 +26,7 @@
             <div class="card mt-5 mx-auto justify-content-center align-items-center d-flex" style="max-width: 600px;">
                 <div class="card-body p-lg-5 p-4 text-center">
                 <div class="guest-only">  
-                    <img class="mb-4" src="/community/assets/images/wikimint-logo.webp"/>  
+                    <img class="mb-4" src="/assets/images/wikimint-logo.webp"/>  
                     <h1>Wikimint Community</h1><hr/>
                     <p>Wikimint Community is a space for users to share their voice, build a public profile, and connect with others. Join a vibrant network, post status updates, and engage with like-minded people across diverse interests.</p>
                 <center>
