--- a/_layouts/user.html
+++ b/_layouts/user.html
@@ -67,4 +67,4 @@ layout: default
   </div>
 
   {% assign ver = site.data.config.v %}
-  <script src="/community/assets/js/wmreg.js?v={{site.data.config.v}}"></script>
+  <script src="/assets/js/wmreg.js?v={{site.data.config.v}}"></script>
