--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="site-version" content="{{site.data.config.v}}">
 
-  <meta name="generator" content="WordPress 6.3">
+  <meta name="generator" content="Drupal">
   
   
 {% if page.n && page.t %}
