--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
       <nav class="navbar navbar-expand-lg">
        
        
-          <a class="navbar-brand" href="/community">
+          <a class="navbar-brand" href="/">
             <img width="175" height="33" alt="Wikimint Community" src="/assets/images/wikimint-logo.webp"/>
         </a>
 
@@ -33,8 +33,32 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Explore
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" target="_blank" href="https://www.wikimint.com">Wikimint</a></li>
+                <li><a class="dropdown-item" target="_blank" href="https://developer.wikimint.com">Developer</a></li>
+                <li><a class="dropdown-item" href="/">Web Apps</a></li>
+                <li><a class="dropdown-item" href="/tools">Online Tools</a></li>
+                <li><a class="dropdown-item" href="/community">Community</a></li>
+              </ul>
+            </li>
             <li class="nav-item">
-              <a class="nav-link" href="/community/user">All members</a>
+              <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/contact.html">Contact</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Community
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/community/user">All members</a></li>
+                <li class="guest-only"><a class="dropdown-item" href="/community">Join now</a></li>
+              </ul>
             </li>
             <li class="nav-item guest-only">
               <a class="nav-link" href="/community">Join now</a>
