--- a/_layouts/user.html
+++ b/_layouts/user.html
@@ -8,7 +8,7 @@ layout: default
                     <div class="pe-lg-4">
                       <span class="text-center">
                         
-                        <img src="{% if page.dp %}{{ page.dp | replace: 's96', 's200' }}{% else %}/community/assets/images/dp.webp{% endif %}" class="mb-3 d-block mx-auto" alt="Profile Picture" width="100%" height="auto">
+                        <img src="{% if page.dp %}{{ page.dp | replace: 's96', 's200' }}{% else %}/assets/images/dp.webp{% endif %}" class="mb-3 d-block mx-auto" alt="Profile Picture" width="100%" height="auto">
                         {% if page.n %}
                         <h2 class="mb-1 display-6 fs-5">{{ page.n }}</h2>
                         {% endif %}
