--- a/_layouts/userlist.html
+++ b/_layouts/userlist.html
@@ -22,7 +22,7 @@ layout: default
 <div class="card mb-3 border-0 bg-light">
   <div class="row g-0">
     <div class="col-2">
-      <img height="80" width="80" src="{% if page.dp %}{{ page.dp | replace: 's96', 's200' }}{% else %}/community/assets/images/dp.webp{% endif %}" class="img-fluid rounded-start mt-3" alt="{{page.n}} community profile page">
+      <img height="80" width="80" src="{% if page.dp %}{{ page.dp | replace: 's96', 's200' }}{% else %}/assets/images/dp.webp{% endif %}" class="img-fluid rounded-start mt-3" alt="{{page.n}} community profile page">
     </div>
     <div class="col-10">
       <div class="card-body">
