--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,8 @@ a{
 .m-width{
     max-width:800px ! important;
 }
+.anchor:before{
+    top:150px ! important;
+        position:absolute ! important;
+
+}
