--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="bg-light text-dark mt-5 py-4">
+<footer class="bg-light text-dark py-4">
     <div class="container">
       <div class="mt-3">
         <p>&copy; 2024 Wikimint Community. All rights reserved.</p><hr/>
