--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,27 +3,22 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg">
  
-        {% if page.url contains '/community' %}
-
-<a class="navbar-brand d-flex align-items-center me-3" href="/community">
-  <img width="50" height="auto" alt="Wikimint Community" src="/assets/images/wikimint-icon.webp"/>
-  <span class="ms-2">Community</span>
-</a>
-
-{% elsif page.url contains '/tools' %}
-
-<a class="navbar-brand d-flex align-items-center" href="/tools">
-  <img width="50" height="auto" alt="Wikimint Tools" src="/assets/images/wikimint-icon.webp"/>
-  <span class="ms-2">Tools</span>
-</a>
-
-{% else %}
-
-<a class="navbar-brand" href="/">
-  <img width="175" height="33" alt="Wikimint Logo" src="/assets/images/wikimint-logo.webp"/>
-</a>
-
-{% endif %}
+        {% if site.data.config.name == 'community' %}
+        <a class="navbar-brand d-flex align-items-center me-3" href="/community">
+          <img width="50" height="auto" alt="Wikimint Community" src="/assets/images/wikimint-icon.webp"/>
+          <span class="ms-2">Community</span>
+        </a>
+      {% elsif site.data.config.name == 'tools' %}
+        <a class="navbar-brand d-flex align-items-center" href="/tools">
+          <img width="50" height="auto" alt="Wikimint Tools" src="/assets/images/wikimint-icon.webp"/>
+          <span class="ms-2">Tools</span>
+        </a>
+      {% else %}
+        <a class="navbar-brand" href="/">
+          <img width="175" height="33" alt="Wikimint Logo" src="/assets/images/wikimint-logo.webp"/>
+        </a>
+      {% endif %}
+      
 
 
       
