--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 
       
 
-          <span class="d-flex align-items-center ms-auto float-end  d-md-none">
+          <!-- <span class="d-flex align-items-center ms-auto float-end  d-md-none">
             <span class="nav-item me-3 guest-only">
                 <button class="btn btn-primary rounded-2 wmsignin" data-bs-toggle="modal" data-bs-target="#signin">Sign in</button>
             </span>
@@ -40,7 +40,7 @@
                 </ul>
               </div>
             </span>          
-        </span>
+        </span> -->
 
         <button class="navbar-toggler float-end" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -60,7 +60,7 @@
                 <li><a class="dropdown-item" target="_blank" href="https://www.wikimint.com">Wikimint</a></li>
                 <li><a class="dropdown-item" target="_blank" href="https://developer.wikimint.com">Developer</a></li>
                 <li><a class="dropdown-item" href="/tools">Online Tools</a></li>
-                <li><a class="dropdown-item" href="/community">Community</a></li>
+                <!-- <li><a class="dropdown-item" href="/community">Community</a></li> -->
               </ul>
             </li>
            
@@ -77,7 +77,7 @@
               </ul>
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Community
               </a>
@@ -86,20 +86,20 @@
                 <li><a class="dropdown-item" href="/community/user">All members</a></li>
                 <li class="guest-only"><a class="dropdown-item" href="/community">Join now</a></li>
               </ul>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/contact.html">Contact</a>
             </li>
-            <li class="nav-item guest-only">
+            <!-- <li class="nav-item guest-only">
               <a class="nav-link" href="/community">Join now</a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
-        <span class="d-flex align-items-center ms-auto float-end  d-none d-md-block">
+        <!-- <span class="d-flex align-items-center ms-auto float-end  d-none d-md-block">
           <span class="nav-item ms-3 guest-only">
               <button class="btn btn-primary rounded-2 wmsignin" data-bs-toggle="modal" data-bs-target="#signin">Sign in</button>
           </span>
@@ -116,7 +116,7 @@
               </ul>
             </div>
           </span>          
-      </span>
+      </span> -->
 
 
       </nav>
