--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,8 @@
   <meta name="google-signin-client_id" content="69794757092-emuuqmul46p24bre1qsim9veuf5hdnoh.apps.googleusercontent.com">
   <script src="/assets/lib/jquery.min.js"></script>
   <script src="/assets/js/wmlib.js?v={{site.data.config.v}}"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7784071102690039"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 {% include header.html %}
