--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,13 @@
   {% assign meta_description = page.description | strip_html | truncate: 160 | escape %}
 {% endif %}
 <meta name="description" content="{{ meta_description }}">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HBNN5MVE39"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HBNN5MVE39');
+</script>
