--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,54 +58,82 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Explore
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/">App Platform</a></li><hr class="mt-2"/>
-                <li><a class="dropdown-item" target="_blank" href="https://www.wikimint.com">Wikimint</a></li>
-                <li><a class="dropdown-item" target="_blank" href="https://developer.wikimint.com">Developer</a></li>
-                <li><a class="dropdown-item" href="/tools">Online Tools</a></li>
-                <!-- <li><a class="dropdown-item" href="/community">Community</a></li> -->
-              </ul>
-            </li>
-           
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Tools
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/tools">Explore All Tools</a></li><hr class="mt-2"/>
-                <li><a class="dropdown-item" href="/tools#web-development">Web & Development</a></li>
-                <li><a class="dropdown-item" href="/tools#seo-content">SEO & Content</a></li>
-                <li><a class="dropdown-item" href="/tools#security-privacy">Security & Privacy</a></li>
-                <li><a class="dropdown-item" href="/tools#general-utilities">General Utilities</a></li>
-              </ul>
-            </li>
 
-            <!-- <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Community
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/community">Community</a></li><hr class="mt-2"/>
-                <li><a class="dropdown-item" href="/community/user">All members</a></li>
-                <li class="guest-only"><a class="dropdown-item" href="/community">Join now</a></li>
-              </ul>
-            </li> -->
+            {% if site.data.config.name == 'wmt' %}
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/about.html">About</a>
+              <a class="nav-link" href="/wmt">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/contact.html">Contact</a>
+              <a class="nav-link" href="/wmt/whitepaper.pdf" target="_blank">Whitepaper</a>
+            </li>            
+            <li class="nav-item">
+              <a class="nav-link" href="#usecase">Use Case</a>
             </li>
-            <!-- <li class="nav-item guest-only">
-              <a class="nav-link" href="/community">Join now</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="#tokenomics">Tokenimics</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://bscscan.com/token/0x4ddb10470db0416dfe2a421c392cda7965454267" target="_blank">Contract</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/wikimint/wmt" target="_blank">Source Code</a>
+            </li>                        
+               {% else %}
+
+               <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Explore
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/">App Platform</a></li><hr class="mt-2"/>
+                  <li><a class="dropdown-item" target="_blank" href="https://www.wikimint.com">Wikimint</a></li>
+                  <li><a class="dropdown-item" target="_blank" href="https://developer.wikimint.com">Developer</a></li>
+                  <li><a class="dropdown-item" target="_blank" href="/wmt">Token (WMT) BEP-20</a></li>
+                  <li><a class="dropdown-item" href="/tools">Online Tools</a></li>
+                  <!-- <li><a class="dropdown-item" href="/community">Community</a></li> -->
+                </ul>
+              </li>
+             
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Tools
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/tools">Explore All Tools</a></li><hr class="mt-2"/>
+                  <li><a class="dropdown-item" href="/tools#web-development">Web & Development</a></li>
+                  <li><a class="dropdown-item" href="/tools#seo-content">SEO & Content</a></li>
+                  <li><a class="dropdown-item" href="/tools#security-privacy">Security & Privacy</a></li>
+                  <li><a class="dropdown-item" href="/tools#general-utilities">General Utilities</a></li>
+                </ul>
+              </li>
+  
+              <!-- <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Community
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/community">Community</a></li><hr class="mt-2"/>
+                  <li><a class="dropdown-item" href="/community/user">All members</a></li>
+                  <li class="guest-only"><a class="dropdown-item" href="/community">Join now</a></li>
+                </ul>
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" target="_blank" href="https://www.wikimint.com/p/contact.html">Contact</a>
+              </li>
+              <!-- <li class="nav-item guest-only">
+                <a class="nav-link" href="/community">Join now</a>
+              </li> -->
+
+
+               {% endif %}
+
+
           </ul>
         </div>
 
